--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: time_slot_widget
 description: A new Flutter project.
-version: 0.1.0
-homepage:
+version: 0.1.1
+homepage: https://github.com/9527001/time_slot_widget.git
 
 environment:
   sdk: '>=2.18.5 <3.0.0'
