--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: time_slot_widget
-description: A new Flutter project.
+description: time slot widget
 version: 0.1.1
 homepage: https://github.com/9527001/time_slot_widget.git
 
